some of the oop working and appending to the dom

--- a/index3.html
+++ b/index3.html
@@ -300,8 +300,25 @@
       </div>
     </div><!-- container content -->
 
-    <div class="container">
-      <div id="reco-holder"></div>
+    <div class="container" id="recommendations">
+      <h2 class="center">Recommendations</h2>
+      <br>
+      <br>
+      <br>
+      <h3>Marijuana</h3>
+      <p>We always recommend sativas, uplifting, go out and do something high, over indicas, heady, cerebral yet couch-locked stoning, for first time users.
+      <div id="row">
+        <div id="marijuana-reco-holder">
+<!--           <div class="col-sm-2">
+            <img src="images/Cataract-Kush-Marijuana-Bud.jpg" class="img-responsive" alt="">
+            <h4>Brian</h4>
+            <p>Cataract Kush<br>
+            Sattiva<br>
+            24%
+            </p>
+          </div> -->
+        </div>
+      </div>
     </div>
 
     <!-- contact us -->
